--- a/SoftwarerAchitecture.Web/Web.config
+++ b/SoftwarerAchitecture.Web/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="SoftwarerEntities" connectionString="metadata=res://*/DbMainInterface.csdl|res://*/DbMainInterface.ssdl|res://*/DbMainInterface.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.224.22.18;initial catalog=bijia.ainknote.com;persist security info=True;user id=bijia;password=bijia!QAZ@WSX#EDC;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="SoftwarerEntities" connectionString="metadata=res:n //*/DbMainInterface.csdl|res://*/DbMainInterface.ssdl|res://*/DbMainInterface.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Softwarer;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
